Name:                Noelm
Version:             0.10.0.2
Synopsis:            The Noelm language module.
Description:         Noelm is a stable fork of the Elm programming language(apx v 0.10.0.2).  It's sole goal is to provide a stable foundation for the graphical-noelm prototype.

Homepage:            http://thobbs.cz/works/2013/graphical-elm/Intro.html

License:             BSD3
License-file:        LICENSE

Author:              Evan Czaplicki
Maintainer:          timothyhobbs@seznam.cz
Copyright:           Copyright: (c) 2011-2013 Evan Czaplicki, (c) 2014 Timothy Hobbs

Category:            Compiler, Language

Build-type:          Custom

Extra-source-files:  changelog.txt
Data-dir:            data
Data-files:          noelm-runtime.js interfaces.data docs.json
Cabal-version:       >=1.9

source-repository head
  type:     git
  location: git://github.com/timthelion/Noelm.git

Library
  exposed-modules:     Noelm.Internal.Dependencies,
                       Noelm.Internal.Documentation,
                       Noelm.Internal.Name,
                       Noelm.Internal.Paths,
                       Noelm.Internal.Utils,
                       Noelm.Internal.Version
  Hs-Source-Dirs:      compiler
  other-modules:       SourceSyntax.Declaration,
                       SourceSyntax.Expression,
                       SourceSyntax.Helpers,
                       SourceSyntax.Literal,
                       SourceSyntax.Location,
                       SourceSyntax.Module,
                       SourceSyntax.Pattern,
                       SourceSyntax.PrettyPrint,
                       SourceSyntax.Type,
                       Generate.JavaScript,
                       Generate.Noscript,
                       Generate.Markdown,
                       Generate.Html,
                       Generate.Cases,
                       Transform.Canonicalize,
                       Transform.Check,
                       Transform.SortDefinitions,
                       Transform.Substitute,
                       Transform.Optimize,
                       Metadata.Prelude,
                       InterfaceSerialization,
                       Parse.Binop,
                       Parse.Declaration,
                       Parse.Expression,
                       Parse.Helpers,
                       Parse.Literal,
                       Parse.Module,
                       Parse.Parse,
                       Parse.Pattern,
                       Parse.Type,
                       Type.Alias,
                       Type.Constrain.Declaration,
                       Type.Constrain.Expression,
                       Type.Constrain.Literal,
                       Type.Constrain.Pattern,
                       Type.Environment,
                       Type.ExtraChecks,
                       Type.Fragment,
                       Type.Inference,
                       Type.PrettyPrint,
                       Type.Solve,
                       Type.State,
                       Type.Type,
                       Type.Unify,
                       Build.Dependencies,
                       Build.File,
                       Build.Flags,
                       Build.Print,
                       Build.Source,
                       Build.Utils,
                       Paths_Noelm

  Build-depends:       aeson,
                       base >=4.2 && <5,
                       binary >= 0.6.4.0,
                       blaze-html == 0.5.* || == 0.6.*,
                       blaze-markup,
                       bytestring,
                       cmdargs,
                       containers >= 0.3,
                       directory,
                       filepath,
                       indents,
                       language-ecmascript >=0.15 && < 1.0,
                       mtl >= 2,
                       pandoc >= 1.10,
                       parsec >= 3.1.1,
                       pretty,
                       text,
                       transformers >= 0.2,
                       union-find,
                       unordered-containers

Executable noelm
  Main-is:             Compiler.hs
  ghc-options:         -threaded -O2
  Hs-Source-Dirs:      compiler
  other-modules:       SourceSyntax.Declaration,
                       SourceSyntax.Expression,
                       SourceSyntax.Helpers,
                       SourceSyntax.Literal,
                       SourceSyntax.Location,
                       SourceSyntax.Module,
                       SourceSyntax.Pattern,
                       SourceSyntax.PrettyPrint,
                       SourceSyntax.Type,
                       Generate.JavaScript,
                       Generate.Noscript,
                       Generate.Markdown,
                       Generate.Html,
                       Generate.Cases,
                       Transform.Canonicalize,
                       Transform.Check,
                       Transform.SortDefinitions,
                       Transform.Substitute,
                       Transform.Optimize,
                       Metadata.Prelude,
                       InterfaceSerialization,
                       Parse.Binop,
                       Parse.Declaration,
                       Parse.Expression,
                       Parse.Helpers,
                       Parse.Literal,
                       Parse.Module,
                       Parse.Parse,
                       Parse.Pattern,
                       Parse.Type,
                       Type.Alias,
                       Type.Constrain.Declaration,
                       Type.Constrain.Expression,
                       Type.Constrain.Literal,
                       Type.Constrain.Pattern,
                       Type.Environment,
                       Type.ExtraChecks,
                       Type.Fragment,
                       Type.Inference,
                       Type.PrettyPrint,
                       Type.Solve,
                       Type.State,
                       Type.Type,
                       Type.Unify,
                       Build.Dependencies,
                       Build.File,
                       Build.Flags,
                       Build.Print,
                       Build.Source,
                       Build.Utils,
                       Paths_Noelm

  Build-depends:       aeson,
                       base >=4.2 && <5,
                       binary >= 0.6.4.0,
                       blaze-html == 0.5.* || == 0.6.*,
                       blaze-markup == 0.5.1.*,
                       bytestring,
                       cmdargs,
                       containers >= 0.3,
                       directory,
                       filepath,
                       indents,
                       language-ecmascript >=0.15 && < 1.0,
                       mtl >= 2,
                       pandoc >= 1.10,
                       parsec >= 3.1.1,
                       pretty,
                       text,
                       transformers >= 0.2,
                       union-find,
                       unordered-containers

Executable noelm-doc
  Main-is:             Docs.hs
  Hs-Source-Dirs:      compiler
  other-modules:       SourceSyntax.Declaration,
                       SourceSyntax.Expression,
                       SourceSyntax.Helpers,
                       SourceSyntax.Literal,
                       SourceSyntax.Location,
                       SourceSyntax.Module,
                       SourceSyntax.Pattern,
                       SourceSyntax.PrettyPrint,
                       SourceSyntax.Type,
                       Parse.Binop,
                       Parse.Declaration,
                       Parse.Expression,
                       Parse.Helpers,
                       Parse.Literal,
                       Parse.Module,
                       Parse.Pattern,
                       Parse.Type

  Build-depends:       aeson,
                       aeson-pretty,
                       base >=4.2 && <5,
                       binary >= 0.6.4.0,
                       bytestring,
                       cmdargs,
                       containers >= 0.3,
                       directory,
                       filepath,
                       indents,
                       mtl >= 2,
                       pandoc >= 1.10,
                       parsec >= 3.1.1,
                       pretty,
                       text

Test-Suite test-noelm
  Type:            exitcode-stdio-1.0
  Hs-Source-Dirs:  tests, compiler
  Main-is:         Main.hs
  other-modules:   Tests.Compiler
                   Tests.Property
                   Tests.Property.Arbitrary
                   SourceSyntax.Helpers
                   SourceSyntax.Literal
                   SourceSyntax.PrettyPrint
  build-depends:   base,
                   directory,
                   Noelm,
                   test-framework,
                   test-framework-hunit,
                   test-framework-quickcheck2,
                   HUnit,
                   pretty,
                   QuickCheck >= 2 && < 3,
                   filemanip,
                   aeson,
                   base >=4.2 && <5,
                   binary >= 0.6.4.0,
                   blaze-html == 0.5.* || == 0.6.*,
                   blaze-markup == 0.5.1.*,
                   bytestring,
                   cmdargs,
                   containers >= 0.3,
                   directory,
                   filepath,
                   indents,
                   language-ecmascript >=0.15 && < 1.0,
                   mtl >= 2,
                   pandoc >= 1.10,
                   parsec >= 3.1.1,
                   pretty,
                   text,
                   transformers >= 0.2,
                   union-find,
                   unordered-containers
