Name:                noelm-server
Version:             0.10
Synopsis:            The Noelm language server.
Description:         This package provides a standalone, Happstack-based Noelm server.

License:             BSD3
License-file:        LICENSE

Author:              Evan Czaplicki & Timothy Hobbs
Maintainer:          timothyhobbs@seznam.cz
Copyright:           Copyright: (c) 2011-2013 Evan Czaplicki, (c) 2014 Timothy Hobbs

Category:            Compiler, Language

Build-type:          Simple

--Extra-source-files:  README.md
Cabal-version:       >=1.8

source-repository head
  type:     git
  location: git://github.com/timthelion/Noelm.git

Executable noelm-server
  Main-is:             Server.hs
  Build-depends:       base >=4.2 && <5,
                       containers >= 0.3,
                       directory,
                       transformers >= 0.2,
                       mtl >= 2,
                       parsec >= 3.1.1,
                       blaze-html >= 0.5.1,
                       HTTP >= 4000,
                       happstack-server,
                       deepseq,
                       filepath,
                       Noelm >= 0.10,
                       process
